--- a/Bot.html
+++ b/Bot.html
@@ -152,7 +152,7 @@
 
     <div class="nav-links" id="navLinks">
       <a href="index.html">🏠 Startseite</a>
-      <a href="partner.html">🤝 Partner</a>
+      <a href="partnerschaft.html">🤝 Partner</a>
       <a href="blacklist.html">🚫 Blacklist</a>
       <a href="news.html">📰 News</a>
       <a href="kontakt.html">📩 Kontakt</a>
