--- a/dashboard.html
+++ b/dashboard.html
@@ -73,57 +73,54 @@
 <div id="dashboard">
   <header>
     <h1>📊 Team Dashboard</h1>
-    <p>Willkommen im internen Bereich</p>
+    <p>Willkommen in Dashboard, da siehst du was aktuelle sind und die aufgaben.(⚠️ wen du aufgaben gemacht wurde, sag bitte den chef bescheid, danke)</p>
   </header>
 
   <div class="container">
     <section>
       <h2>📥 Neue Bewerbungen</h2>
       <ul>
-        <li>Max#1234 – „Ich möchte als Supporter helfen.“</li>
-        <li>Lisa#5678 – „Ich bin aktiv & Discord erfahren.“</li>
+        <li>momentan sind es keinen Bewerber*innen</li>
       </ul>
     </section>
 
     <section>
       <h2>🎫 Offene Tickets</h2>
       <ul>
-        <li>#1023 – Hilfe bei Partnerschaftsanfrage</li>
-        <li>#1024 – Frage zur Blacklist</li>
+        <li>momentan keinen</li>
       </ul>
     </section>
 
     <section>
       <h2>🗂 Aufgaben</h2>
       <ul>
-        <li>[ ] Bewerbungen prüfen</li>
-        <li>[x] Blacklist aktualisieren</li>
-        <li>[ ] Neue Partnerlogos einfügen</li>
+       <li>momentan noch keinen</li>
       </ul>
     </section>
 
     <section>
       <h2>👥 Teammitglieder</h2>
       <ul>
-        <li>𝚃𝚎𝚊𝚖 𝙼𝚎𝚖𝚋𝚎𝚛 👥 – Luca</li>
-        <li>𝚂𝚞𝚙𝚙𝚘𝚛𝚝 𝙰𝚐𝚎𝚗𝚝 🎧 – Sarah</li>
+        <li>𝙿𝚛𝚘𝚓𝚎𝚌𝚝 𝙻𝚎𝚊𝚍 ⚙️: doge43</li>
+        <li>𝙿𝚛𝚘𝚓𝚎𝚌𝚝 𝙻𝚎𝚊𝚍 ⚙️: mandalorian281</li>
+        <li>𝚂𝚞𝚙𝚙𝚘𝚛𝚝 𝙰𝚐𝚎𝚗𝚝 🎧: mathias09144_45205</li>
+        <li>𝚂𝚞𝚙𝚙𝚘𝚛𝚝 𝙰𝚐𝚎𝚗𝚝 🎧: ichbineinnoobindortnite</li>
       </ul>
     </section>
 
     <section>
       <h2>📈 Statistik</h2>
       <ul>
-        <li>Neue Bewerbungen (heute): 2</li>
-        <li>Blacklist-Einträge gesamt: 15</li>
-        <li>Support-Anfragen heute: 6</li>
+        <li>Neue Bewerbungen (heute): 0</li>
+        <li>Blacklist-Einträge gesamt: 0</li>
+        <li>Support-Anfragen heute: 0</li>
       </ul>
     </section>
 
     <section>
       <h2>📁 Interne Vorlagen & Downloads</h2>
       <ul>
-        <li><a href="#">📄 Bewerbungs-PDF</a></li>
-        <li><a href="#">🖼️ Logo (weiß)</a></li>
+        <li> momentan keinen</li>
       </ul>
     </section>
   </div>
