--- a/dashboard.html
+++ b/dashboard.html
@@ -129,7 +129,7 @@
 
   <div class="container">
 
-    <section class="bereich team">
+    <section class="bereich chef">
       <h2>📥 Neue Bewerbungen</h2>
       <ul><li>Keine neuen Bewerbungen</li></ul>
     </section>
@@ -165,10 +165,11 @@
 
 <script>
   const users = {
-    "MarcelCTG": { password: "chefsafe", role: "chef" },
-    "doge43": { password: "teampass", role: "team" },
-    "mandalorian281": { password: "teampass", role: "team" },
-    "mathias09144_45205": { password: "teampass", role: "team" }
+    "MarcelCTG": { password: "MarcelsupChef2008", role: "chef" },
+    "gurke8574": { password: "chefalex25", role: "chef" },
+    "doge43": { password: "doge43team25dsjfor", role: "team" },
+    "mandalorian281": { password: "mandalorian281team25kssoen", role: "team" },
+    "mathias09144_45205": { password: "mathias09144_45205team25iejnsse", role: "team" }
   };
 
   function checkLogin() {
