--- a/dashboard.html
+++ b/dashboard.html
@@ -166,7 +166,7 @@
 <script>
   const users = {
     "MarcelCTG": { password: "MarcelsupChef2008", role: "chef" },
-    "gurke8574": { password: "chefalex25", role: "chef" },
+    "gurke8574": { password: "alexchef25klesppe", role: "chef" },
     "doge43": { password: "doge43team25dsjfor", role: "team" },
     "mandalorian2811": { password: "mandalorian2811team25kssoen", role: "team" },
     "mathias09144_45205": { password: "mathias09144_45205team25iejnsse", role: "team" }
